wrote details on samcart page

--- a/samcart.html
+++ b/samcart.html
@@ -40,8 +40,13 @@
             </div>
             <h1>SamCart</h1>
             <h2>Design Lead, 2015—Now</h2>
-            <p>Detailed writing coming soon!</p>
-            <a href="https://beta.samcart.com" target="_blank">https://beta.samcart.com</a>
+            <a href="https://samcart.com" target="_blank">https://samcart.com</a>
+            <p>SamCart is a web tool that helps digital product entreprenuers sell online and manage their business. We enable users to build individual checkout pages and share them anywhere. They can then analyze sales data through graphs and reports, manage individual orders and subscriptions, and implement tools to build their business. These tools include creating upsells, split tests, and event integrations.</p>
+            <p>Some problems we have discovered are building a tool for a different level businesses and what data and actions do users want when they first create an account versus as they continue to log back in.</p>
+            <p>Research has included gathering user feedback through customer support, collecting survey data based on certain plans and features, and understanding how non-customers are selling things online.</p>
+            <p>This research has helped make design decisions in the SamCart tool as well as on the informational site. One of the most important pages in the tool is the Dashboard. It's the first page users land on after creating a new account, as well as returning users logging back in. This allows us to create a place where users can see different types of analytics and take a multitude of actions in their account. Some of these actions include upgrading your plan, watching onboarding tutorials, creating a new product, managing recent orders, connecting new integrations, and adding new learning products to your account library.</p>
+            <p>There are decisions we made based on trying to catch users attention and acheiving the goal of communicating clearly to current users and potential customers. Some of these decisions created ways of breaking patterns to guide a viewer to digest information more easily, creating micro-interactions to help guide users to understand how to get where they might want to go and how to navigate back, and clearly communicating what might be a next step in a process like signing up.</p>
+            <p>Internally, we have implemented some processes that help us work and communicate more effectively. As a design and development team, we use visual web and animated prototypes for interactions to smooth out handoffs. I've also created resource libraries that include SVG icon fonts, button and asset styles, and color variables to help the development team work more efficiently and continue moving forward.</p>
             <div class="browser">
                 <div class="topbar">
                     <div class="circle"></div>
