wrote details on the rest of the pages

--- a/dailyui.html
+++ b/dailyui.html
@@ -40,7 +40,9 @@
             </div>
             <h1>Daily UI</h1>
             <h2>Participant, 2015—2016</h2>
-            <p>Detailed writing coming soon!</p>
+            <p>Yes, I was one of those designers posting a design prompt from Daily UI everyday for the last 100 weekdays.</p>
+            <p>In October of 2015 I stumbled upon dailyui.co, a daily email letter that includes a simple design prompt and nothing else. I thought, “Oh, this could be fun.” Although, as a motion designer, I decided that I would up the challenge to animate each prompt into a looping GIF.</p>
+            <p>This was a good idea, but also a very challenging one. Instead of spending maybe 30 minutes a day designing the prompt, I typically spent about 1–4 hours. However, this helped me learn better time management, workflow efficiency, and grow to become a better motion designer.</p>
             <a href="https://dribbble.com/dmtors/projects/319430-Daily-UI" target="_blank">https://dribbble.com/dmtors/projects/319430-Daily-UI</a>
             <img class="image" src="images/projects/dailyui/dailyui-001.gif"/>
             <p>001—Sign Up</p>
@@ -54,6 +56,7 @@
             <p>068—Flight Search</p>
             <img class="image" src="images/projects/dailyui/dailyui-026.gif"/>
             <p>026—Subscribe</p>
+            <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank">Read more about my journey with Daily UI</a>
         </div>
         <div id="contact" class="section contact">
             <div class="pulse">
