--- a/goodtruth.html
+++ b/goodtruth.html
@@ -40,8 +40,8 @@
             </div>
             <h1>Goodtruth</h1>
             <h2>Filmmaker, 2012—Now</h2>
-            <p>Detailed writing coming soon!</p>
             <a href="https://www.facebook.com/goodtruthfilm" target="_blank">https://www.facebook.com/goodtruthfilm</a>
+            <p>Through loss, marriage, and service, I've found that life is made up of moments gone in an instant. That's why it's important to capture the brief moments in time that define who we are, where we come from, and what we want to do with our lives.</p>
             <div class="video-container">
                 <iframe src="https://player.vimeo.com/video/121162303" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
