--- a/memento.html
+++ b/memento.html
@@ -40,7 +40,12 @@
             </div>
             <h1>Memento</h1>
             <h2>Designer, 2017</h2>
-            <p>Detailed writing coming soon!</p>
+            <p>A couple friends approached me about an idea they had that answers the question of "Well, my birthday has passed now, what should I do with all these cards? I don't want to throw them out, they're really nice."</p>
+            <p>Together we thought through in what format we would want to save these cards and memories in. A mobile app felt like the most reasonable and realistic. It was also important for us to realize who our target audience would be and then design an app for them.</p>
+            <p>Memento is a place to keep all of your birthday cards, holiday cards, kids drawings, and keepsakes from any certain person or moment in your life.</p>
+            <p>Once we had our core functionality documented, I began sketching wireframes for the different pages and actions inside the app. During this phase we discovered how momentos could be organized, how easy it should be to create a new momento, and how to quickly find the momentos you've already created.</p>
+            <p>I then designed digital representations of the wireframes and created a user map for how someone would navigate through the app. In considering our audience, it helped us to make design decisions on typography, hierarchy, sizing, color, and layout.</p>
+            <p>The goal with this project is to see it developed into a fully functioning app and be able to use it instead of feeling guilty for storing or throwing away old cards and momentos.</p>
             <img class="image" src="images/projects/memento/home.jpg"/>
             <img class="image" src="images/projects/memento/inner-folder.jpg"/>
             <img class="image" src="images/projects/memento/settings.jpg"/>
