put a video up on index

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <p>Hey, I’m Derek — a designer exploring the foundation and boundaries of human-machine experiential interaction. I focus on designing for accessibility and inclusivity.</p>
             <p>I’m also interested in what pure story-telling looks like through still and motion photography, as well as musical composition.</p>
             <p>When I’m not desiging, I’m likely traveling with my wife, finding good food or enjoying silence in nature. Oh and being a doggy dad to our rescue pug, Peggy.</p>
+            <div class="video-container-43">
+                <iframe src="https://player.vimeo.com/video/228411215" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
         </div>
         <div id="work" class="section projects">
             <div class="pulse">
