changed pd article

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </br></br>
 
-<h1>If you're just getting into product design, he wrote <a href="https://blog.prototypr.io/7-tips-40-resources-from-my-first-year-in-product-design-5600aa3da4eb" target="_blank"><span>this article</span></a> for you.</h1>
+<h1>If you're just getting into product design, he wrote <a href="https://medium.com/@dmtors/6-tips-and-50-resources-for-young-product-designers-32acb4872ee1" target="_blank"><span>this article</span></a> for you.</h1>
 
 </br></br>
 
