--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
 
-<h1><span>Derek Torsani</span> is a product and motion designer focused on inclusivity. Currently, he's building <a href="https://halfdollar.co" target="_blank"><span>Halfdollar</span></a>, a clear personal budgeting web app for everyone. He also <a href="https://soundcloud.com/forthrightmusic" target="_blank"><span>writes music</span></a>, <a href="https://unsplash.com/@dmtors" target="_blank"><span>takes pictures</span></a>, and <a href="https://www.facebook.com/goodtruthfilm" target="_blank"><span>makes short films</span></a>.</h1>
+<h1><span>Derek Torsani</span> is a product and motion designer focused on inclusivity. Currently, he's building <a href="https://halfdollar.co" target="_blank"><span>Halfdollar</span></a>, a simple personal budgeting web app. He also <a href="https://soundcloud.com/forthrightmusic" target="_blank"><span>writes music</span></a>, <a href="https://unsplash.com/@dmtors" target="_blank"><span>takes pictures</span></a>, and <a href="https://www.facebook.com/goodtruthfilm" target="_blank"><span>makes short films</span></a>.</h1>
 
 </br></br>
 
-<h1>During the day, he designs for <a href="https://medium.com/@dmtors/redesigning-the-samcart-website-e03a5d666aef" target="_blank"><span>SamCart</span></a>. In the past, he created things for <a href="https://medium.com/@dmtors/sandals-resorts-app-def86054ab23" target="_blank"><span>Sandals Resorts</span></a> out of Miami. One time, he animated a different <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank"><span>design interaction</span></a> for 100 weekdays in a row. He made <a href="http://friendsanonymo.us" target="_blank"><span>FriendsAnonymous</span></a> as a safe way for people to come together anonymously to discuss difficult topics.</h1>
+<h1>Formerly, he designed for <a href="https://medium.com/@dmtors/redesigning-the-samcart-website-e03a5d666aef" target="_blank"><span>SamCart</span></a>. In the past, he created things for <a href="https://medium.com/@dmtors/sandals-resorts-app-def86054ab23" target="_blank"><span>Sandals Resorts</span></a> out of Miami. One time, he animated a different <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank"><span>design interaction</span></a> for 100 weekdays in a row. He made <a href="http://friendsanonymo.us" target="_blank"><span>FriendsAnonymous</span></a> as a safe way for people to come together anonymously to discuss difficult topics.</h1>
 
 </br></br>
 
