--- a/index.html
+++ b/index.html
@@ -3,28 +3,69 @@
 
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="styles.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500" rel="stylesheet">
-    <title>Derek Torsani</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,600" rel="stylesheet">
+    <title>@dmtors</title>
 </head>
 
 <body>
 
-<h1><span>Derek Torsani</span> is a product and motion designer focused on inclusivity. Currently, he's building <a href="https://halfdollar.co" target="_blank"><span>Halfdollar</span></a>, a simple personal budgeting web app. He also <a href="https://soundcloud.com/forthrightmusic" target="_blank"><span>writes music</span></a>, <a href="https://unsplash.com/@dmtors" target="_blank"><span>takes pictures</span></a>, and <a href="https://www.facebook.com/goodtruthfilm" target="_blank"><span>makes short films</span></a>.</h1>
-
-</br></br>
-
-<h1>Formerly, he designed for <a href="https://medium.com/@dmtors/redesigning-the-samcart-website-e03a5d666aef" target="_blank"><span>SamCart</span></a>. In the past, he created things for <a href="https://medium.com/@dmtors/sandals-resorts-app-def86054ab23" target="_blank"><span>Sandals Resorts</span></a> out of Miami. One time, he animated a different <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank"><span>design interaction</span></a> for 100 weekdays in a row. He made <a href="http://friendsanonymo.us" target="_blank"><span>FriendsAnonymous</span></a> as a safe way for people to come together anonymously to discuss difficult topics.</h1>
-
-</br></br>
-
-<h1>If you're just getting into product design, he wrote <a href="https://medium.com/@dmtors/6-tips-and-50-resources-for-young-product-designers-32acb4872ee1" target="_blank"><span>this article</span></a> for you.</h1>
-
-</br></br>
-
-<p><a href="https://twitter.com/dmtors" target="_blank" style="background-color: rgba(21, 161, 242, 0.25);"><span>Twitter</span></a> • <a href="https://medium.com/@dmtors" target="_blank" style="background-color: rgba(0, 171, 108, 0.25);"><span>Medium</span></a> • <a href="https://dribbble.com/dmtors" target="_blank" style="background-color: rgba(234, 76, 137, 0.25);"><span>Dribbble</span></a> • <a href="https://codepen.io/dmtors" target="_blank" style="background-color: rgba(14, 190, 255, 0.25);"><span>CodePen</span></a> • <a href="https://github.com/dmtors" target="_blank" style="background-color: rgba(64, 120, 192, 0.25);"><span>GitHub</span></a> • <a href="https://linkedin.com/in/derektorsani" target="_blank" style="background-color: rgba(0, 119, 181, 0.25);"><span>LinkedIn</span></a></p>
+<div class="container">
+    <div class="card">
+        <div class="card-top">
+            <img src="mattsmith-drawing.jpg" alt="Self-Portrait"/>
+            <p class="large-font-size font-weight-bold">Derek Mark Torsani</p>
+        </div>
+        <div style="margin-top:118px; width:100%;">
+            <p class="font-weight-bold">Digital Product Design</p>
+            <ul>
+                <li><a class="link-primary" href="https://twitter.com/dmtors" target="_blank">Tweets</a></li>
+                <li><a class="link-primary" href="https://dribbble.com/dmtors" target="_blank">Shots</a></li>
+                <li><a class="link-primary" href="https://medium.com/@dmtors" target="_blank">Writings</a></li>
+                <li><a class="link-primary" href="https://codepen.io/dmtors/" target="_blank">Code</a></li>
+                <li><a class="link-primary" href="https://github.com/dmtors" target="_blank">Experiments</a></li>
+                <li><a class="link-primary" href="https://www.linkedin.com/in/derektorsani/" target="_blank">Résumé</a></li>
+            </ul>
+            <div style="margin-top:16px; display:flex; align-items:center;">
+                <img src="map-pin.svg" alt="Map Pin" style="margin-right:8px;"/>
+                <a class="link-secondary" href="https://google.com/maps/@38.9324669,-77.0056767,9.47z" target="_blank">38.9324669, -77.0056767</a>
+            </div>
+            <div class="main-content">
+                <!-- <div class="section">
+                    <h6>Current Role</h6>
+                    <p>Product Designer <span>/</span> <a class="link-primary" href="https://alarm.com" target="_blank">Alarm.com</a></p>
+                </div> -->
+                <div class="section">
+                    <h6>Side Projects</h6>
+                    <p>Founder, CEO, Design Engineer <span>/</span> <a class="link-primary" href="https://halfdollar.co" target="_blank">Halfdollar</a></p>
+                    <p>Creator <span>/</span> <a class="link-primary" href="http://weiigh.com" target="_blank">Weiigh</a></p>
+                    <p>Creator <span>/</span> <a class="link-primary" href="http://friendsanonymo.us" target="_blank">FriendsAnonymous</a></p>
+                </div>
+                <div class="section">
+                    <h6>Previous Roles</h6>
+                    <p>Design Lead <span>/</span> <a class="link-primary" href="https://samcart.com" target="_blank">SamCart</a></p>
+                    <p>Senior Designer <span>/</span> <a class="link-primary" href="http://brllnt.co" target="_blank">Brllnt</a></p>
+                    <p>Multimedia Designer <span>/</span> <a class="link-primary" href="https://sandals.com" target="_blank">Sandals Resorts</a></p>
+                    <p>Multimedia Designer <span>/</span> <a class="link-primary" href="http://522productions.com" target="_blank">522 Productions</a></p>
+                </div>
+                <div class="section">
+                    <h6>Hobbies</h6>
+                    <p>Radio <span>/</span> <a class="link-primary" href="https://anchor.fm/dmtors" target="_blank">Anchor</a></p>
+                    <p>Music <span>/</span> <a class="link-primary" href="https://soundcloud.com/forthrightmusic" target="_blank">Forthright</a></p>
+                    <p>Photography <span>/</span> <a class="link-primary" href="https://unsplash.com/@dmtors" target="_blank">Unsplash</a></p>
+                    <p>Filmmaking <span>/</span> <a class="link-primary" href="https://www.facebook.com/goodtruthfilm" target="_blank">Goodtruth</a></p>
+                </div>
+                <div class="section">
+                    <h6>Education</h6>
+                    <p>Bachelor of Fine Arts <span>/</span> Graphic Design</p>
+                    <p><a class="link-primary" href="https://mica.edu" target="_blank">MICA</a> <span>/</span> Baltimore, Maryland</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 
