--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,600" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:400,600" rel="stylesheet"> -->
     <title>@dmtors</title>
 </head>
 
@@ -19,7 +19,7 @@
             <p class="large-font-size font-weight-bold">Derek Mark Torsani</p>
         </div>
         <div style="margin-top:118px; width:100%;">
-            <p class="font-weight-bold">Digital Product Design</p>
+            <p class="font-weight-bold">Product Designer</p>
             <ul>
                 <li><a class="link-primary" href="https://twitter.com/dmtors" target="_blank">Tweets</a></li>
                 <li><a class="link-primary" href="https://dribbble.com/dmtors" target="_blank">Shots</a></li>
