--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </svg>
     </div>
     <div class="card card-white card-content right in" style="animation-delay:4s;">
-        <p>Hey Grandma! My work friends call me a <span class="semibold">Product Designer</span>, meaning I make sure the apps people use on their phone and computer feel right and look good. I do this during the day at <a class="link bold" href="https://alarm.com" target="_blank">Alarm.com</a>.</p>
+        <p>Hey Grandma! My work friends call me a <span class="semibold">User Experience Designer</span>, meaning I make sure the apps people use on their phone and computer feel right and look good. I do this during the day at <a class="link bold" href="https://alarm.com" target="_blank">Alarm.com</a>.</p>
         <div class="image">
             <img class="portrait" src="mattsmith-drawing.jpg" alt="Self-Portrait"/>
         </div>
