--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         </svg>
     </div>
     <div class="card card-white card-content right in" style="animation-delay:24s;">
-        <p>Being RG color blind doesn’t mean I can’t see color, it means that some wavelengths of certain colors are hard to distinguish. What this actually does is help me think about how other people experience the world differently from myself. I wrote an <a class="link bold" href="#" target="_blank">article</a> about how this affects my work as a designer.</p>
+        <p>Being RG color blind doesn’t mean I can’t see color, it means that some wavelengths of certain colors are hard to distinguish. What this actually does is help me think about how other people experience the world differently from myself. I wrote an <a class="link bold" href="https://medium.com/@dmtors/being-a-color-blind-designer-aa6828c09a42" target="_blank">article</a> about how this affects my work as a designer.</p>
         <div class="image">
             <img class="portrait" src="mattsmith-drawing.jpg" alt="Self-Portrait"/>
         </div>
