--- a/weiigh/index.html
+++ b/weiigh/index.html
@@ -28,7 +28,7 @@
                             </g>
                         </g>
                     </svg>
-                    <a class="ml-3 text-dark" href="WeiighTemplate.xlsx" download><small>Download Spreadsheet Template</small></a>
+                    <a class="ml-3 text-dark" href="https://docs.google.com/spreadsheets/d/1F8qF23IzJE5y1TafrqHQ6t0Jb5XwEunpZsjEYDKJRHU/copy" target="_blank"><small>Open Template</small></a>
                 </div>
             </div>
             <div class="row mt-5">
@@ -68,16 +68,16 @@
             </div>
             <div class="row mt-3">
                 <div class="col-md-4">
-                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Start from a template:</span> <a class="text-dark" href="WeiighJobTemplate.xlsx" download>Which job?</a></small>
-                    <a href="WeiighJobTemplate.xlsx" download><img class="w-100 mt-2" src="whichjob.png"/></a>
+                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Start from a template:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1AUS5dsiQo2pwREldbevNSCTrl2ydRHHb4Jbvd_KnJc0/edit?usp=sharing" target="_blank">Which job?</a></small>
+                    <a href="https://docs.google.com/spreadsheets/d/1AUS5dsiQo2pwREldbevNSCTrl2ydRHHb4Jbvd_KnJc0/edit?usp=sharing" target="_blank"><img class="w-100 mt-2" src="whichjob.png"/></a>
                 </div>
                 <div class="col-md-4 mt-4 mt-md-0">
-                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Start from a template:</span> <a class="text-dark" href="WeiighCarTemplate.xlsx" download>Which car?</a></small>
-                    <a href="WeiighCarTemplate.xlsx" download><img class="w-100 mt-2" src="whichcar.png"/></a>
+                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Start from a template:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1azoehOJvl2FrH8gElEXyx-0WOUNqTwZQX-PUFoF85P8/copy" target="_blank">Which car?</a></small>
+                    <a href="https://docs.google.com/spreadsheets/d/1azoehOJvl2FrH8gElEXyx-0WOUNqTwZQX-PUFoF85P8/copy" target="_blank"><img class="w-100 mt-2" src="whichcar.png"/></a>
                 </div>
                 <div class="col-md-4 mt-4 mt-md-0">
-                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Or create your own:</span> <a class="text-dark" href="WeiighTemplate.xlsx" download>(Blank)</a></small>
-                    <a href="WeiighTemplate.xlsx" download><img class="w-100 mt-2" src="whichblank.png"/></a>
+                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Or create your own:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1F8qF23IzJE5y1TafrqHQ6t0Jb5XwEunpZsjEYDKJRHU/copy" target="_blank">(Blank)</a></small>
+                    <a href="https://docs.google.com/spreadsheets/d/1F8qF23IzJE5y1TafrqHQ6t0Jb5XwEunpZsjEYDKJRHU/copy" target="_blank"><img class="w-100 mt-2" src="whichblank.png"/></a>
                 </div>
             </div>
             <div class="mt-4">
@@ -116,7 +116,7 @@
                     <h5 class="text-dark font-weight-bold">Bonus Step:</h5>
                     <p class="text-dark">If you feel that a certain factor is so good it deserves a bonus, change the 0 in the last column to a 1.</p>
                     <span class="text-dark font-weight-bold d-block w-100">That’s it! Check the results page to see how your options score against one another. Then you can make your decision more clearly.</span>
-                    <a class="btn btn-lg btn-dark w-100 mt-3" href="WeiighTemplate.xlsx" download>Get Started</a>
+                    <a class="btn btn-lg btn-dark w-100 mt-3" href="https://docs.google.com/spreadsheets/d/1F8qF23IzJE5y1TafrqHQ6t0Jb5XwEunpZsjEYDKJRHU/copy" target="_blank">Get Started</a>
                 </div>
             </div>
             <div class="row mt-5">
