--- a/weiigh/index.html
+++ b/weiigh/index.html
@@ -68,8 +68,8 @@
             </div>
             <div class="row mt-3">
                 <div class="col-md-4">
-                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Start from a template:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1AUS5dsiQo2pwREldbevNSCTrl2ydRHHb4Jbvd_KnJc0/edit?usp=sharing" target="_blank">Which job?</a></small>
-                    <a href="https://docs.google.com/spreadsheets/d/1AUS5dsiQo2pwREldbevNSCTrl2ydRHHb4Jbvd_KnJc0/edit?usp=sharing" target="_blank"><img class="w-100 mt-2" src="whichjob.png"/></a>
+                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Start from a template:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1AUS5dsiQo2pwREldbevNSCTrl2ydRHHb4Jbvd_KnJc0/copy" target="_blank">Which job?</a></small>
+                    <a href="https://docs.google.com/spreadsheets/d/1AUS5dsiQo2pwREldbevNSCTrl2ydRHHb4Jbvd_KnJc0/copy" target="_blank"><img class="w-100 mt-2" src="whichjob.png"/></a>
                 </div>
                 <div class="col-md-4 mt-4 mt-md-0">
                     <small class="text-dark font-weight-bold"><span class="font-weight-normal">Start from a template:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1azoehOJvl2FrH8gElEXyx-0WOUNqTwZQX-PUFoF85P8/copy" target="_blank">Which car?</a></small>
