--- a/weiigh/index.html
+++ b/weiigh/index.html
@@ -28,7 +28,7 @@
                             </g>
                         </g>
                     </svg>
-                    <a class="ml-3 text-dark" href="https://docs.google.com/spreadsheets/d/1F8qF23IzJE5y1TafrqHQ6t0Jb5XwEunpZsjEYDKJRHU/copy" target="_blank"><small>Open Template</small></a>
+                    <a class="ml-3 text-dark" href="https://docs.google.com/spreadsheets/d/1rXZyHwyh6ReL8x4vLVCzJtXfNqNQYDuoFPcv72zn1yY/copy" target="_blank"><small>Open Blank Weiigh Template</small></a>
                 </div>
             </div>
             <div class="row mt-5">
@@ -68,16 +68,16 @@
             </div>
             <div class="row mt-3">
                 <div class="col-md-4">
-                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Start from a template:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1AUS5dsiQo2pwREldbevNSCTrl2ydRHHb4Jbvd_KnJc0/copy" target="_blank">Which job?</a></small>
-                    <a href="https://docs.google.com/spreadsheets/d/1AUS5dsiQo2pwREldbevNSCTrl2ydRHHb4Jbvd_KnJc0/copy" target="_blank"><img class="w-100 mt-2" src="whichjob.png"/></a>
+                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Start from a template:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1WdCsjlT62eqMEiqe1MuyhqKDA9oR9EreB9oAoeAyAZM/copy" target="_blank">Which job?</a></small>
+                    <a href="https://docs.google.com/spreadsheets/d/1WdCsjlT62eqMEiqe1MuyhqKDA9oR9EreB9oAoeAyAZM/copy" target="_blank"><img class="w-100 mt-2" src="whichjob.png"/></a>
                 </div>
                 <div class="col-md-4 mt-4 mt-md-0">
-                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Start from a template:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1azoehOJvl2FrH8gElEXyx-0WOUNqTwZQX-PUFoF85P8/copy" target="_blank">Which car?</a></small>
-                    <a href="https://docs.google.com/spreadsheets/d/1azoehOJvl2FrH8gElEXyx-0WOUNqTwZQX-PUFoF85P8/copy" target="_blank"><img class="w-100 mt-2" src="whichcar.png"/></a>
+                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Start from a template:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1oME78YLXudlZP1q61Dyc9jMSzE-5Yvgb0X2n45hLKX8/copy" target="_blank">Which car?</a></small>
+                    <a href="https://docs.google.com/spreadsheets/d/1oME78YLXudlZP1q61Dyc9jMSzE-5Yvgb0X2n45hLKX8/copy" target="_blank"><img class="w-100 mt-2" src="whichcar.png"/></a>
                 </div>
                 <div class="col-md-4 mt-4 mt-md-0">
-                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Or create your own:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1F8qF23IzJE5y1TafrqHQ6t0Jb5XwEunpZsjEYDKJRHU/copy" target="_blank">(Blank)</a></small>
-                    <a href="https://docs.google.com/spreadsheets/d/1F8qF23IzJE5y1TafrqHQ6t0Jb5XwEunpZsjEYDKJRHU/copy" target="_blank"><img class="w-100 mt-2" src="whichblank.png"/></a>
+                    <small class="text-dark font-weight-bold"><span class="font-weight-normal">Or create your own:</span> <a class="text-dark" href="https://docs.google.com/spreadsheets/d/1rXZyHwyh6ReL8x4vLVCzJtXfNqNQYDuoFPcv72zn1yY/copy" target="_blank">(Blank)</a></small>
+                    <a href="https://docs.google.com/spreadsheets/d/1rXZyHwyh6ReL8x4vLVCzJtXfNqNQYDuoFPcv72zn1yY/copy" target="_blank"><img class="w-100 mt-2" src="whichblank.png"/></a>
                 </div>
             </div>
             <div class="mt-4">
@@ -116,12 +116,12 @@
                     <h5 class="text-dark font-weight-bold">Bonus Step:</h5>
                     <p class="text-dark">If you feel that a certain factor is so good it deserves a bonus, change the 0 in the last column to a 1.</p>
                     <span class="text-dark font-weight-bold d-block w-100">That’s it! Check the results page to see how your options score against one another. Then you can make your decision more clearly.</span>
-                    <a class="btn btn-lg btn-dark w-100 mt-3" href="https://docs.google.com/spreadsheets/d/1F8qF23IzJE5y1TafrqHQ6t0Jb5XwEunpZsjEYDKJRHU/copy" target="_blank">Get Started</a>
+                    <a class="btn btn-lg btn-dark w-100 mt-3" href="https://docs.google.com/spreadsheets/d/1rXZyHwyh6ReL8x4vLVCzJtXfNqNQYDuoFPcv72zn1yY/copy" target="_blank">Get Started</a>
                 </div>
             </div>
             <div class="row mt-5">
                 <div class="col-12">
-                    <iframe class="w-100" style="height:479px;" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRkmoiUTYAJd64hlpXMHKEpyHM5-QcgXBLhKB7elC8QKsptXJQVuHEEfznZUv1k17ooB7OHWQPWwexR/pubhtml?widget=true&amp;headers=false"></iframe>
+                    <iframe class="w-100" style="height:600px;" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRkmoiUTYAJd64hlpXMHKEpyHM5-QcgXBLhKB7elC8QKsptXJQVuHEEfznZUv1k17ooB7OHWQPWwexR/pubhtml?widget=true&amp;headers=false"></iframe>
                 </div>
             </div>
             <div class="row mt-5">
