may 1 reboot on may 2 whatever its 1203am

--- a/index.html
+++ b/index.html
@@ -13,21 +13,28 @@
 
 <div class="container">
 
-    <h1 class="bold">Derek Torsani is a designer* roaming around.</h1>
+    <h1 class="bold">Hi, I'm called Derek.</h1>
     </br>
-    <p class="bold">Currently designing products for <a class="bold" href="https://oracle.com" target="_blank">Oracle</a>.</p>
-    <p>Previously built design systems at <a href="https://alarm.com" target="_blank">Alarm.com</a>, designed everything for an ecommerce startup, traveled the Caribbean making frames move, and graduated from <a href="https://mica.edu" target="_blank">MICA</a>.</p>
+    <p class="bold">Recent Positions:</p>
+    <p>Senior Product Designer @ <a class="bold" href="https://oracle.com" target="_blank">Oracle</a><span>, Remote</span></p>
+    <p>UX Designer @ <a class="bold" href="https://alarm.com" target="_blank">Alarm.com</a><span>, Tysons, VA</span></p>
+    <p>Lead Designer @ <a class="bold" href="https://samcart.com" target="_blank">SamCart</a><span>, Fulton, MD</span></p>
+    <p>Senior Designer @ <a class="bold" href="https://brllnt.co" target="_blank">Brllnt</a><span>, Washington, DC</span></p>
+    <p>Multimedia Designer @ <a class="bold" href="https://sandals.com" target="_blank">Sandals Resorts</a><span>, Miami, FL</span></p>
     </br>
-    <p class="bold">Founded <a class="bold" href="https://halfdollar.co" target="_blank">Halfdollar</a>, a simple and powerful budgeting tool.</p>
-    <p>Also making other side projects like <a href="http://weiigh.com" target="_blank">Weiigh</a>, <a href="http://friendsanonymo.us" target="_blank">FriendsAnonymous</a>, and <a href="https://instagram.com/heygreyarea" target="_blank">Grey Area</a>.</p>
+    <p class="bold">Current Projects:</p>
+    <p><a class="bold" href="https://instagram.com/heygreyarea" target="_blank">Grey Area</a></p>
+    <p><a class="bold" href="http://weiigh.com" target="_blank">Weiigh</a></p>
+    <p><a class="bold" href="http://friendsanonymo.us" target="_blank">FriendsAnonymous</a></p>
     </br>
-    <p>Recognized for Best of the Day in Android on <a href="https://www.uplabs.com/posts/daily-ui-076-loading-android-marshmallow-boot-a" target="_blank">UpLabs</a>, top 5 for the day on Product Hunt, and gave a workshop on animating SVG at Hackital 2017.</p>
+    <p class="bold">Hobbies:</p>
+    <p><a class="bold" href="https://soundcloud.com/nonfictiondmv" target="_blank">Music</a></p>
+    <p><a class="bold" href="https://unsplash.com/@dmtors" target="_blank">Photography</a></p>
+    <p><a class="bold" href="https://vimeo.com/dmtors" target="_blank">Filmmaking</a></p>
     </br>
-    <p>Hobbies include playing <a href="https://soundcloud.com/msplaceddmv" target="_blank">music</a>, taking <a href="https://unsplash.com/@dmtors" target="_blank">photos</a>, and making <a href="https://www.facebook.com/goodtruthfilm" target="_blank">films</a>.</p>
+    <p class="bold"><a class="bold" href="https://twitter.com/dmtors" target="_blank">Twitter</a>, <a class="bold" href="https://dribbble.com/dmtors" target="_blank">Dribbble</a>, <a class="bold" href="https://medium.com/@dmtors" target="_blank">Medium</a>, <a class="bold" href="https://linkedin.com/in/derektorsani" target="_blank">LinkedIn</a>, <a class="bold" href="mailto:derektorsani@gmail.com" target="_blank">Email</a></p>
     </br>
-    <p class="bold"><a class="bold" href="https://twitter.com/dmtors" target="_blank">Twitter</a>, <a class="bold" href="https://dribbble.com/dmtors" target="_blank">Dribbble</a>, <a class="bold" href="https://medium.com/@dmtors" target="_blank">Medium</a>, <a class="bold" href="mailto:derektorsani@gmail.com" target="_blank">Email</a></p>
-    </br>
-    <h6 class="bold">*Work examples and resumé available upon request.</h6>
+    <h6 class="bold">Work examples and resumé available upon request.</h6>
 
 </div>
 
