--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>UX Designer @ <a class="bold" href="https://alarm.com" target="_blank">Alarm.com</a><span>, Tysons, VA</span></p>
     <p>Lead Designer @ <a class="bold" href="https://samcart.com" target="_blank">SamCart</a><span>, Fulton, MD</span></p>
     <p>Senior Designer @ <a class="bold" href="https://brllnt.co" target="_blank">Brllnt</a><span>, Washington, DC</span></p>
-    <p>Multimedia Designer @ <a class="bold" href="https://sandals.com" target="_blank">Sandals Resorts</a><span>, Miami, FL</span></p>
+    <p>Multimedia Designer @ <a class="bold" href="https://sandals.com" target="_blank">Sandals</a><span>, Miami, FL</span></p>
     </br>
     <p class="bold">Current Projects:</p>
     <p><a class="bold" href="https://instagram.com/heygreyarea" target="_blank">Grey Area</a></p>
