--- a/index.html
+++ b/index.html
@@ -13,21 +13,24 @@
 
 <div class="container">
 
-    <h1 class="bold">Hi, I'm called Derek.</h1>
+    <h1 class="bold">Hi, I'm called Derek <span>(dare-ick)</span>.</h1>
+    <p>I'm an <a class="bold" href="https://www.16personalities.com/infj-personality" target="_blank">INFJ</a>, a minimalist, morning person, musician, vegetarian, and I really enjoy untangling things.</p>
     </br>
-    <p class="bold">Recent Positions:</p>
+    <p class="bold">Currently</p>
     <p>Senior Product Designer @ <a class="bold" href="https://oracle.com" target="_blank">Oracle</a><span>, Remote</span></p>
+    </br>
+    <p class="bold">Previously</p>
     <p>UX Designer @ <a class="bold" href="https://alarm.com" target="_blank">Alarm.com</a><span>, Tysons, VA</span></p>
     <p>Lead Designer @ <a class="bold" href="https://samcart.com" target="_blank">SamCart</a><span>, Fulton, MD</span></p>
     <p>Senior Designer @ <a class="bold" href="https://brllnt.co" target="_blank">Brllnt</a><span>, Washington, DC</span></p>
     <p>Multimedia Designer @ <a class="bold" href="https://sandals.com" target="_blank">Sandals</a><span>, Miami, FL</span></p>
     </br>
-    <p class="bold">Current Projects:</p>
+    <p class="bold">Projects</p>
     <p><a class="bold" href="https://instagram.com/heygreyarea" target="_blank">Grey Area</a></p>
     <p><a class="bold" href="http://weiigh.com" target="_blank">Weiigh</a></p>
     <p><a class="bold" href="http://friendsanonymo.us" target="_blank">FriendsAnonymous</a></p>
     </br>
-    <p class="bold">Hobbies:</p>
+    <p class="bold">Hobbies</p>
     <p><a class="bold" href="https://soundcloud.com/nonfictiondmv" target="_blank">Music</a></p>
     <p><a class="bold" href="https://unsplash.com/@dmtors" target="_blank">Photography</a></p>
     <p><a class="bold" href="https://vimeo.com/dmtors" target="_blank">Filmmaking</a></p>
